base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
spec:
  replicas: PLACEHOLDER_REPLICA
  selector:
    matchLabels:
      app: sample-app
  template:
    metadata:
      labels:
        app: sample-app
    spec:
      containers:
        - name: nginx-image
          image: PLACEHOLDER_CONTAINER_IMAGE
          ports:
            - containerPort: 80
