base/maintenance-post-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: maintenance-service
  namespace: PLACEHOLDER_NAMESPACE
  annotations:
    argocd.argoproj.io/hook: PostSync
    argocd.argoproj.io/hook-delete-policy: HookSucceeded
spec:
  selector:
    app: maintenance-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
