base/maintenance-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: PLACEHOLDER_NAMESPACE
  name: service-maintenance
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: app-2048
