base/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: PLACEHOLDER_NAMESPACE
  name: community-web
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    name: community-web
